<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FrameLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/blurbackground"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo1" />

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/heightButton"
            android:layout_below="@+id/imageView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp" >

            <TextView
                android:id="@+id/tvChonCongThuc"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/background_selector_menu"
                android:gravity="center"
                android:text="@string/TNCongThuc"
                android:textSize="@dimen/textSizeMenu"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/button" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout8"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/heightButton"
            android:layout_below="@+id/relativeLayout1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp" >

            <TextView
                android:id="@+id/tvVietCongThuc"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/background_selector_menu"
                android:gravity="center"
                android:text="@string/TNLyThuyet"
                android:textSize="@dimen/textSizeMenu"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/button" />
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/relativeLayout22"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/heightButton"
            android:layout_below="@+id/relativeLayout8"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp" >

            <TextView
                android:id="@+id/tvTongHopCT"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/background_selector_menu"
                android:gravity="center"
                android:text="@string/TongHopCT"
                android:textSize="@dimen/textSizeMenu"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/button" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/heightButton"
            android:layout_below="@+id/relativeLayout22"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp" >

            <TextView
                android:id="@+id/tvThachDau"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/background_selector_menu"
                android:gravity="center"
                android:text="@string/MenuThachDau"
                android:textSize="@dimen/textSizeMenu"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/button" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/heightButton"
            android:layout_below="@+id/relativeLayout2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp" >

            <TextView
                android:id="@+id/tvCaiDat"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/background_selector_menu"
                android:gravity="center"
                android:text="@string/CaiDatMenu"
                android:textSize="@dimen/textSizeMenu"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/button" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout4"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/heightButton"
            android:layout_below="@+id/relativeLayout3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp" >

            <TextView
                android:id="@+id/tvDiemCao"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/background_selector_menu"
                android:gravity="center"
                android:text="@string/DiemCao"
                android:textSize="@dimen/textSizeMenu"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/button" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/heightButton"
            android:layout_below="@+id/relativeLayout4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp" >

            <TextView
                android:id="@+id/tvGioiThieu"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/background_selector_menu"
                android:gravity="center"
                android:text="@string/GioiThieu"
                android:textSize="@dimen/textSizeMenu"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/button" />
        </RelativeLayout>
    </RelativeLayout>

</FrameLayout>