<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/caiDat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/white"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/heightHeader"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/custom_dialog_header" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/ChonGame"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imvCloseCaiDat"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/icon_close" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/boDe"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/button"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spBoDe"
            style="@style/spinner_style"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/button"
            android:drawSelectorOnTop="true"
            android:spinnerMode="dropdown"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/nhacNen"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/button"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/LinearLayout11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <SeekBar
                android:id="@+id/sBarMusic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:max="100"
                android:progress="0"
                android:progressDrawable="@drawable/custom_seebar"
                android:secondaryProgress="0" />

            <ToggleButton
                android:id="@+id/toggleButtonMusic"
                android:layout_width="32dp"
                android:layout_height="19dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@drawable/toggle_selector"
                android:checked="true"
                android:text=""
                android:textOff=""
                android:textOn="" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/amThanh"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/button"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/LinearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <SeekBar
                android:id="@+id/sBarSound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:max="100"
                android:progress="0"
                android:progressDrawable="@drawable/custom_seebar"
                android:secondaryProgress="0" />

            <ToggleButton
                android:id="@+id/toggleButtonSound"
                android:layout_width="32dp"
                android:layout_height="19dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@drawable/toggle_selector"
                android:checked="false"
                android:text=""
                android:textOff=""
                android:textOn="" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>