<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/diemCao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/white"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/heightHeader"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/custom_dialog_header" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/DiemCao"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imvCloseDiemCao"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/icon_close" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/dcCongThuc"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/button"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="Điểm: "
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/button"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDiemCongThuc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="Thời gian :"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/button"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvThoiGianCongThuc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1s"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/button" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/dcLyThuyet"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/button"
                android:textSize="20sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="Điểm: "
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/button"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDiemLyThuyet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView50"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="Thời gian :"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/button"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvThoiGianLyThuyet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1s"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/button" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>